src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__assignment_to_number_with_implicit_and_explicit_plus_sign.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statements
---
[
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralInteger {
            value: 1,
        },
    },
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralInteger {
            value: 1,
        },
    },
]
