src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__binary_stmts_of_two_variables_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
[
    BinaryExpression {
        operator: Plus,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    },
    BinaryExpression {
        operator: Equal,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ),
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "z",
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "y",
                        },
                    ),
                    base: None,
                },
            ),
        },
    },
    BinaryExpression {
        operator: Minus,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ),
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "z",
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "y",
                        },
                    ),
                    base: None,
                },
            ),
        },
    },
    BinaryExpression {
        operator: Equal,
        left: ReferenceExpr {
            kind: Address,
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "y",
                        },
                    ),
                    base: Some(
                        ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "x",
                                },
                            ),
                            base: None,
                        },
                    ),
                },
            ),
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "z",
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "y",
                        },
                    ),
                    base: None,
                },
            ),
        },
    },
]
