src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__exponent_expressions_parse.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
CallStatement {
    operator: ReferenceExpr {
        kind: Member(
            Reference {
                name: "EXPT",
            },
        ),
        base: None,
    },
    parameters: Some(
        ExpressionList {
            expressions: [
                LiteralInteger {
                    value: 1,
                },
                LiteralInteger {
                    value: 2,
                },
            ],
        },
    ),
}
