src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__function_call_no_params.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
CallStatement {
    operator: Reference {
        name: "fn",
    },
    parameters: None,
}
