src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__function_call_params_with_trailling_comma.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
CallStatement {
    operator: Reference {
        name: "fn",
    },
    parameters: Some(
        ExpressionList {
            expressions: [
                LiteralInteger {
                    value: 1,
                },
                LiteralInteger {
                    value: 2,
                },
                LiteralInteger {
                    value: 3,
                },
            ],
        },
    ),
}
