src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__literal_can_be_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: "&prg.statements[0]"
---
LiteralInteger {
    value: 7,
}
