src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__literal_hex_number_with_underscores_can_be_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
LiteralInteger {
    value: 3735928559,
}
