src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__module_expression_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Modulo(
        None,
    ),
    left: LiteralInteger {
        value: 5,
    },
    right: LiteralInteger {
        value: 2,
    },
}
